
openonload-201205
-----------------

- bug28090: Fix close and destructor functions for epoll.
- bug28268: Fix command line arg handling in onload_tcpdump.
- bug27932: RPM spec file dependency fix for MRG rt kernels.
- bug27700: Validate options in kernel to protect against bad values.
- TCP loopback acceleration (see release notes).
- Don't disable interrupts when lock contention detected.
- Improvements to TCP/UDP select/poll/epoll handling in kernel.
- Do not grab stack lock when EF_POLL_ON_DEMAND=0.
- bug27186: Fix sys-calls and interrupts with select + TCP-listener.
- bug27102: Fix bugs relating to signal handling at process termination.
- bug27329: Fix scaling of timers on SFN6x22F adapters.
- TCP striping feature reinstated.
- bug27530: Allow non-root to set EF_IRQ_CORE with EF_PACKET_BUFFER_MODE=1.
- Put useful info in /proc/$pid/fd to identify Onload sockets and stacks.
- Reduce ACK rate when streaming to increase TCP efficiency.
- Fix epoll bug failing to report data arriving via kernel.
- bug2641: Fix problems relating to handling of ARP.
- New tool onload_fuser to identify processes using Onload.
- bug27997: Fix bug that caused bad error code to be returned by close().
- Added module options to set max size of control plane tables.
- bug28096: Do not access user-space data under spinlock
- bug28090: Fix close and dtor functions for epoll.
- bug28228: getsockopt(udp_sock, IP_PKTOPTIONS) should return ENOPROTOOPT.
- bug28268: Fix command line parsing bugs in onload_tcpdump.
- bug28267: Use MAC and IP addresses to validate reinforcement requests.
- Add end-of-batch flag ONLOAD_ZC_END_OF_BURST to onload_zc_callback.
- New option EF_TCP_RST_DELAYED_CONN prevents delayed delivery.
- bug28558: onload_zc_send() now respects O_NONBLOCK flag.
- bug28556: Fix fstat() interception.
- bug28691: Fix error path in pipe() call.
- Include debug symbols in binaries by default.
- bug28480: Fix process exit interception.