@@ -108,6 +108,6 @@ Any questions?
 
 
 ==========
- version: openonload-201205-p1
-revision: 169088f685bb (ool201205) openonload-201205-p1
-    date: Wed May 16 16:05:10 BST 2012
+ version: openonload-201205-p2
+revision: adec79bbc4b7 (ool201205) openonload-201205-p2
+    date: Fri Jun  8 16:36:51 BST 2012
